# inbcm-public-frontend

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy-public.yml
parse-xlsx/: Cargo.toml  LICENSE_MIT
parse-xlsx/pkg/: package.json  parse_xlsx.d.ts  parse_xlsx.js  parse_xlsx_bg.wasm  parse_xlsx_bg.wasm.d.ts
parse-xlsx/src/: lib.rs
public/: INBCM_Arquivologia.xlsx  INBCM_Biblioteconomia.xlsx  INBCM_Museologia.xlsx
src/: App.tsx  main.tsx  parseXLSX.ts  vite-env.d.ts
src/components/: Checkbox.tsx  CustomTag.tsx  Divider.tsx  Footer.tsx  Header.tsx  HeaderAutenticar.tsx  IMtProps.ts  Input.tsx  Item.module.scss  Item.tsx  List.tsx  MismatchsModal.tsx  MultiSelect.tsx  Radio.tsx  Select.tsx  Table.tsx  TableItens.tsx  Upload.tsx  Uploader.tsx
src/components/Util/: Util.ts  useCommonProperties.ts  useMtProps.ts  useOutsideClick.ts  useSpreadProps.ts  useUniqueId.ts
src/components/tests/: Header.test.tsx  Input.test.tsx  MismatchsModal.test.tsx  Select.test.tsx
src/layouts/: default.tsx
src/pages/: [...all].tsx  autenticar.tsx  error.tsx  index.tsx  login.tsx  perfil.tsx  solicitarAcesso.tsx
src/pages/dashboard/: index.tsx
src/pages/declaracoes/: index.tsx  modelos.tsx  novo.tsx
src/pages/submissoes/: index.tsx  novo.tsx  worker.ts
src/scripts/: testMainFlow.py  updatePortainer.py  updatePortainerDev.py  updatePortainerMain.py
src/utils/: colorStatus.ts  modal.tsx  parseXLSX.ts  request.ts  request.tsx  router.ts  router.tsx  store.ts  usePaths.ts
(+7 files in other folders)
