[package]
name = "parse-xlsx"
version = "0.1.0"
authors = ["Vitor Daniel <vitor036daniel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
calamine = "0.25"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["File"] }
gloo-utils = { version = "0.2", features = ["serde"] }
serde_json = "1.0"
slug = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
